--- a/style.css
+++ b/style.css
@@ -109,6 +109,23 @@
         padding-top: 1%;
         padding-left: 5%;
       }
+      .hfive {
+        position: relative;
+        bottom: 10px;
+        text-align: center;
+        font-size: 220%;
+        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+      }
+      .hsix {
+font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+text-align: center;
+font-size: 250%;
+      }
+      .hseven {
+font-family: Georgia, 'Times New Roman', Times, serif;
+        text-align: center;
+        font-size: 150%;
+      }
       .pone {
         text-align: center;
         font-weight: lighter;
@@ -250,5 +267,46 @@ a:hover, a:active {
     display: block;
   margin-left: auto;
   margin-right: auto;
+}
+.bballimg {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 30%;
+  display: block;
+margin-left: auto;
+margin-right: auto;
+}
+
+.container1 {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  padding-top: 100%; /* 1:1 Aspect Ratio */
+}
+
+.responsive-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 80%;
+  border: none;
+}
+#footerbutton2 {
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    font-size: 120%;
+    background-color: rgba(211, 211, 211, 0.479);
+    color: blue;
+    text-align: center;
+    border-bottom: solid;
+    display: flex;
+  justify-content: center;
+  padding-top: 3%;
+
 }
  
