--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ font-size: 250%;
 font-family: Georgia, 'Times New Roman', Times, serif;
         text-align: center;
         font-size: 150%;
-      }
+              }
       .pone {
         text-align: center;
         font-weight: lighter;
@@ -272,7 +272,7 @@ a:hover, a:active {
   border: 1px solid #ddd;
   border-radius: 4px;
   padding: 5px;
-  width: 30%;
+  width: 70%;
   display: block;
 margin-left: auto;
 margin-right: auto;
@@ -309,4 +309,7 @@ margin-right: auto;
   padding-top: 3%;
 
 }
- 
+.col1 {
+background-color: lightgrey;
+padding-bottom: 15%;
+}
