--- a/style.css
+++ b/style.css
@@ -285,6 +285,7 @@ margin-right: auto;
   padding-top: 100%; /* 1:1 Aspect Ratio */
 }
 
+
 .responsive-iframe {
   position: absolute;
   top: 0;
@@ -313,3 +314,7 @@ margin-right: auto;
 background-color: lightgrey;
 padding-bottom: 15%;
 }
+.col2 {
+  padding-bottom: 10%;
+  padding-top: 5%;
+  }
