--- a/style.css
+++ b/style.css
@@ -126,6 +126,12 @@ font-family: Georgia, 'Times New Roman', Times, serif;
         text-align: center;
         font-size: 150%;
               }
+.h8 {
+font-family: Georgia, 'Times New Roman', Times, serif;
+text-align: center;
+font-size: 150%;
+color: blue;
+                }
       .pone {
         text-align: center;
         font-weight: lighter;
@@ -142,6 +148,7 @@ font-family: Georgia, 'Times New Roman', Times, serif;
         padding-left: 10%;
         padding-right: 5%;
         font-family: 'Trebuchet MS', sans-serif;
+        color: blue;
       }
 .pthree {
   text-align: left;
@@ -181,9 +188,9 @@ font-family: Georgia, 'Times New Roman', Times, serif;
   height: 100%;
 }
 
-.text {
+.text1 {
   color: white;
-  font-size: 20px;
+  font-size: 150%;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -191,7 +198,7 @@ font-family: Georgia, 'Times New Roman', Times, serif;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   text-align: center;
-}
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif}
 
 .container {
     position: relative;
@@ -209,7 +216,7 @@ font-family: Georgia, 'Times New Roman', Times, serif;
     bottom: 100%;
     left: 0;
     right: 0;
-    background-color: lightgrey;
+    background-color: #585757;
     overflow: hidden;
     width: 100%;
     height:0;
